--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "~4.16.1",
     "twig": "~0.10.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
